Improve menu bar handling

--- a/astrogrid/portalB/src/site/html/AstroGridPortalTemplate.html
+++ b/astrogrid/portalB/src/site/html/AstroGridPortalTemplate.html
@@ -31,7 +31,7 @@
          </tbody>
       </table>
       <!-- Separator bar -->
-            <table cellpadding="2" cellspacing="0" border="0" style="text-align: left; width: 100%;">
+      <table cellpadding="2" cellspacing="0" border="0" style="text-align: left; width: 100%;">
          <tbody>
             <tr bgcolor="#0000FF">
                <td>
@@ -41,24 +41,24 @@
          </tbody>
       </table>
       <!-- Menu and main page-->
-      <table cellpadding="2" cellspacing="0" border="0" style="width: 100%;">
+      <table cellpadding="2" cellspacing="0" border="0" width="0" style="height: 80%; width: 100%; ">
          <tbody>
-            <tr align="center" valign="middle" style="color: rgb(51,51,255);">
+            <tr align="center" valign="top" style="color: rgb(51,51,255);">
             	<!-- Menu -->
                <td style="background-color: rgb(204,204,204); width: 140px;">
-                  <a href="index.html"><br> <u><b>Home</b></u></a>
+                  <a href="index.html"><br> <b>Home</b></a>
                   <br><br>
-                  <a href="agregistry.html"><u><b>Browse Registry</b></u></a>
+                  <a href="agregistry.html"><b>Browse Registry</b></a>
                   <br><br>
-                  <a href="agdataquery.html"><u><b>Data Query</b></u></a>
+                  <a href="agdataquery.html"><b>Data Query</b></a>
                   <br><br>
-                  <a href="agmyspace.html"><u><b>Browse MySpace</b></u></a>
+                  <a href="agmyspace.html"><b>Browse MySpace</b></a>
                   <br><br>
-                  <a href="agjobmonitor.html"><u><b>Job Monitor</b></u></a>
+                  <a href="agjobmonitor.html"><b>Job Monitor</b></a>
                   <br><br>
-                  <a href="agtools.html"><u><b>Tools</b></u></a>
+                  <a href="agtools.html"><b>Tools</b></a>
                   <br><br>
-                  <a href="aglogout.html"><u><b>Logout</b></u></a>
+                  <a href="aglogout.html"><b>Logout</b></a>
                   <br><br>
                </td>
                <!-- Main page -->
