--- a/astrogrid/portalB/src/site/html/index.html
+++ b/astrogrid/portalB/src/site/html/index.html
@@ -36,9 +36,9 @@
          </tbody>
       </table>
       <!-- Menu and main page-->
-      <table cellpadding="2" cellspacing="0" border="0" style="width: 100%;">
+      <table cellpadding="2" cellspacing="0" border="0" style="height: 80%; width: 100%;">
          <tbody>
-            <tr align="center" valign="middle" style="color: rgb(51,51,255);">
+            <tr align="center" valign="top" style="color: rgb(51,51,255);">
             	<!-- Menu -->
                <td style="background-color: rgb(204,204,204); width: 140px;">
                   <a href="index.html"><br> <u><b>Home</b></u></a>
