Had a few tags that were wrong that made the page look different in another browser such as Mozilla.  That has been corrected now.

--- a/astrogrid/portalB/src/site/DataQuery/DataQueryMenu.html
+++ b/astrogrid/portalB/src/site/DataQuery/DataQueryMenu.html
@@ -1,5 +1,5 @@
       <!-- Menu and main page-->
-      <table cellpadding="2" cellspacing="0" border="0" style="width: 100%;">
+      <table cellpadding="2" cellspacing="0" border="0" style="width: 140px;">
          <tbody>
             <tr align="center" valign="middle" style="color: rgb(51,51,255);">
             	<!-- Menu -->
