Fixed style bug in HTNL pages

--- a/astrogrid/portalB/src/cocoon/html/agjobmonitor.html
+++ b/astrogrid/portalB/src/cocoon/html/agjobmonitor.html
@@ -70,12 +70,12 @@
                         <tr align="center" valign="middle" bgcolor="#000000">
                            <td width="0" height="0" colspan="0" rowspan="0" 
                            	 style="color: white; font-family: arial, helvetica, sans-serif; 
-                           	 font-size-adjust: +2; font-weight: bold; height: 30px; width: 200px; ">
+                           	 font-weight: bold; height: 30px; width: 200px; ">
                                  Job Monitor
                            </td>
                            <td width="0" height="0" colspan="0" rowspan="0" 
                            	 style="color: white; font-family: arial, helvetica, sans-serif; 
-                           	 font-size-adjust: +2; font-weight: bold; height: 30px; width: 200px; ">
+                           	 font-weight: bold; height: 30px; width: 200px; ">
                                  <a href="agjobmonitorhelp.html" style="color: #FFFFFF; ">Help</a>
                            </td>
                            <td>
