Revised URLs for Cocoon portal integration

--- a/astrogrid/portalB/src/site/DataQuery/DataQueryMenu.html
+++ b/astrogrid/portalB/src/site/DataQuery/DataQueryMenu.html
@@ -1,23 +1,23 @@
       <!-- Menu and main page-->
-      <table cellpadding="2" cellspacing="0" border="0" style="width: 140px;">
+      <table cellpadding="2" cellspacing="0" border="0" style="width: 100%;">
          <tbody>
             <tr align="center" valign="middle" style="color: rgb(51,51,255);">
             	<!-- Menu -->
                <td style="background-color: rgb(204,204,204); width: 140px;">
                	<br />
-                  <a href="index.html"><b>Home</b></a>
+                  <a href="/cocoon/astrogrid/index.html"><b>Home</b></a>
                   <br /><br />
-                  <a href="agregistry.html"><b>Browse Registry</b></a>
+                  <a href="/cocoon/astrogrid/agregistry.html"><b>Browse Registry</b></a>
                   <br /><br />
                   <i><b>Data Query</b></i>
                   <br /><br />
-                  <a href="agmyspace.html"><b>Browse MySpace</b></a>
+                  <a href="/cocoon/astrogrid/agmyspace.html"><b>Browse MySpace</b></a>
                   <br /><br />
-                  <a href="agjobmonitor.html"><b>Job Monitor</b></a>
+                  <a href="/cocoon/astrogrid/agjobmonitor.html"><b>Job Monitor</b></a>
                   <br /><br />
-                  <a href="agtools.html"><b>Tools</b></a>
+                  <a href="/cocoon/astrogrid/agtools.html"><b>Tools</b></a>
                   <br /><br />
-                  <a href="aglogout.html"><b>Logout</b></a>
+                  <a href="/cocoon/astrogrid/aglogout.html"><b>Logout</b></a>
                   <br /><br />
                </td>
             </tr>
