--- a/astrogrid/portalB/src/site/html/index.html
+++ b/astrogrid/portalB/src/site/html/index.html
@@ -12,7 +12,7 @@
           <tbody>
              <tr align="center" valign="middle">
                 <td style="height: 100px; width: 140px;">               
-   <a href="www.astrogrid.org">                   	<img src="aglogo.png"
+   <a href="http://www.astrogrid.org">                   	<img src="aglogo.png"
  title="AstroGrid Home" alt=""
  style="border: 0px solid ; width: 140px; height: 100px;">
                     </a>                </td>
@@ -102,7 +102,7 @@ to see the progress being made.<br>
        AstroGrid is a &pound;3.7M project aimed at building a data-grid 
      for UK astronomy, which will form the UK contribution to a       global
 Virtual Observatory. More information can be found at the AstroGrid&nbsp;<a
- href="http://www.astrogrid.org">home</a> &nbsp;and <a
+ href="http://http://www.astrogrid.org">home</a> &nbsp;and <a
  href="http://wiki.astrogrid.org/bin/view/Astrogrid/WebHome">Wiki</a> pages. 
   </big></big></p>
             </blockquote>
@@ -121,7 +121,7 @@ Virtual Observatory. More information can be found at the AstroGrid&nbsp;<a
                 <td align="center"
  style="color: rgb(255,153,0); font-size-adjust: -2; width: 140px;">    
               	Member of the                   <br>
-                   <a href="www.ivoa.net">                   	<img
+                   <a href="http://www.ivoa.net">                   	<img
  src="ivoalogo.png" title="IVOA Alliance" alt="IVOA Alliance"
  style="border: 0px solid ; width: 140px; height: 77px;">
                     </a>                   <br>
