--- a/astrogrid/portalB/src/site/html/agjobmonitorhelp.html
+++ b/astrogrid/portalB/src/site/html/agjobmonitorhelp.html
@@ -13,7 +13,7 @@
            <tbody>
               <tr align="center" valign="middle">
                  <td style="height: 100px; width: 140px;">              
-    <a href="www.astrogrid.org">                   	<img
+    <a href="http://www.astrogrid.org">                   	<img
  src="aglogo.png" title="AstroGrid Home" alt=""
  style="border: 0px solid ; width: 140px; height: 100px;">
                      </a>                </td>
@@ -113,7 +113,7 @@
                  <td align="center"
  style="color: rgb(255,153,0); font-size-adjust: -2; width: 140px;">     
              	Member of the                   <br>
-                    <a href="www.ivoa.net">                   	<img
+                    <a href="http://www.ivoa.net">                   	<img
  src="ivoalogo.png" title="IVOA Alliance" alt="IVOA Alliance"
  style="border: 0px solid ; width: 140px; height: 77px;">
                      </a>                   <br>
