Corrected link to www.astrogrid.org in main text

--- a/astrogrid/portalB/src/ral/html/agindex.html
+++ b/astrogrid/portalB/src/ral/html/agindex.html
@@ -102,7 +102,7 @@ to see the progress being made.<br>
        AstroGrid is a &pound;3.7M project aimed at building a data-grid 
      for UK astronomy, which will form the UK contribution to a       global
 Virtual Observatory. More information can be found at the AstroGrid&nbsp;<a
- href="http://http://www.astrogrid.org">home</a> &nbsp;and <a
+ href="http://www.astrogrid.org">home</a> &nbsp;and <a
  href="http://wiki.astrogrid.org/bin/view/Astrogrid/WebHome">Wiki</a> pages. 
   </big></big></p>
             </blockquote>
