--- a/astrogrid/portalB/src/site/DataQuery/DataQueryHeader.html
+++ b/astrogrid/portalB/src/site/DataQuery/DataQueryHeader.html
@@ -3,7 +3,7 @@
          <tbody>
             <tr align="center" valign="middle">
                <td style="height: 100px; width: 140px;">
-                  <a href="www.astrogrid.org">
+                  <a href="http://www.astrogrid.org">
                   	<img src="aglogo.png" title="AstroGrid Home" alt="" 
                   		  style="border: 0px solid ; width: 140px; height: 100px;"> 
                   </a>
