--- a/astrogrid/portalB/src/site/DataQuery/DataQueryMenu.html
+++ b/astrogrid/portalB/src/site/DataQuery/DataQueryMenu.html
@@ -25,7 +25,7 @@
          	<td align="center" valign="top" style="color: #FF9900; font-size-adjust: -2; width: 140px;">
             	Member of the
             	<br />
-            	<a href="www.ivoa.net">
+            	<a href="http://www.ivoa.net">
             		<img src="ivoalogo.png" title="IVOA Alliance" alt="IVOA Alliance" 
                     	 style="border: 0px solid ; width: 140px; height: 77px;"> 
             	</a>
