Tried to stop web pages from caching on client

--- a/astrogrid/portalB/src/ral/html/agindex.html
+++ b/astrogrid/portalB/src/ral/html/agindex.html
@@ -2,8 +2,8 @@
 <html>
 <head>
        
-  <meta http-equiv="content-type"
- content="text/html; charset=ISO-8859-1">
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+      <meta http-equiv="pragma" content="no-cache">
   <title>AstroGrid Portal - Welcome</title>
 </head>
      <body>
