--- a/astrogrid/portalB/src/ral/html/agtoolshelp.html
+++ b/astrogrid/portalB/src/ral/html/agtoolshelp.html
@@ -4,6 +4,7 @@
        
   <meta http-equiv="content-type"
  content="text/html; charset=ISO-8859-1">
+      <meta http-equiv="pragma" content="no-cache">
   <title>AstroGrid Portal - Astro Tools Help</title>
 </head>
      <body>
