--- a/astrogrid/portalB/src/ral/html/agdataqueryhelp.html
+++ b/astrogrid/portalB/src/ral/html/agdataqueryhelp.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+      <meta http-equiv="pragma" content="no-cache">
       <title>
          AstroGrid Portal - Data Query Help
       </title>
