new link to the Dataquery.jsp page

--- a/astrogrid/portalB/src/site/DataQuery/DataQueryHelp.html
+++ b/astrogrid/portalB/src/site/DataQuery/DataQueryHelp.html
@@ -71,7 +71,7 @@
                            <td width="0" height="0" colspan="0" rowspan="0" 
                            	 style="color: white; font-family: arial, helvetica, sans-serif; 
                            	 font-size-adjust: -2; font-weight: bold; height: 30px; width: 200px; ">
-                                 <a href="DataQuery.jsp" style="color: #FFFFFF; ">Data Query</a>
+                                 <a href="/cocoon/astrogrid/agdataquery.html" style="color: #FFFFFF; ">Data Query</a>
                            </td>
                            <td width="0" height="0" colspan="0" rowspan="0" 
                            	 style="color: white; font-family: arial, helvetica, sans-serif; 
