Combined code from DatasetAgentDelegate with DatacenterDelegate

--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/delegate/package.html
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/delegate/package.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-Implementation of a 'delegate' - at the moment basically the client access classes automatically generated from the wsdl.
+The delegates exist to make calling the web service as trivial as creating a Delegate class
+and then calling a method on it.
 </body>
 </html>
