improved documentaiton. split existing MySQLQueryTranslator into a vanilla-SQL version, and MySQL specific part.

--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/queriers/package.html
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/queriers/package.html
@@ -1,6 +1,12 @@
 <html>
 <body>
-this package defines how the querying of the backend database works.  Here are defined the interfaces, and
+defines how the querying of the backend database works.  Here are defined the interfaces, and
 a factory is provided that loads the appropriate implementation based on a configuration file setting
+<p>
+Also provides framework of a system to translate between ADQL and SQL. See subpackages for database-specific
+implementations. See {@link org.astrogrid.datacenter.queriers.TranslationFrame} for explanation of the translation system.
+
+
+<h3>Implementation Details</h3>
 </body>
 </html>
