--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/config/package.html
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/config/package.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-Configuration Subsystem.
+Configuration package.  Provides an application-wide access to a set of
+configuration files, whether XML or Property-like (key/value pairs).
 </body>
 </html>
