--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/delegate/dummy/package.html
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/delegate/dummy/package.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-The dummy delegates are used for tests, but may also be used for integration tests so are included in the
-normal (runtime) package rather than just the unit tests.
+The dummy delegates are used for tests, but may also be used for integration
+tests so are included in the normal (runtime) package so that other projects
+can run against it.
 </body>
 </html>
