--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/queriers/sql/package.html
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/queriers/sql/package.html
@@ -1,7 +1,21 @@
 <html>
 <body>
-<h3>Vanilla-SQL implementation of a querier.</h3>
-
+<h2>Vanilla SQL Querying</h2>
+<h3>Introduction & Purpose</h3>
+This package provides a 'standard' SQL implementation of a JDBC/SQL querier,
+ADQL-&gtSQL translator, and SQL ResultSet -&gt VOtable converter.
+<p>
+While it is likely that some databases will need different query translators,
+the querier and result set converter should be standard enough to cope with
+most JDBC/SQL implementations.
+<p>
+<h3>Runtime</h3>
+The appropriate drivers for databases being used should be available in the
+class path, and the fully specified classname(s) given in the configuration file
+for the code to load.  See the user documentation...
+<p>
+However this should mean that this is flexible enough to cope with most
+JDBC/SQL implementations.
 
 </body>
 </html>
