new portal for the community

--- a/astrogrid/portalB/src/ral/html/aglogin.html
+++ b/astrogrid/portalB/src/ral/html/aglogin.html
@@ -93,18 +93,6 @@
           <td align="right">Password:</td>
           <td align="left"><input name="Password" type="password"/></td>
         </tr>
-        <tr>
-          <td align="right">Community:</td>
-          <td align="left"><select name="Community">
-              <option selected>LEICESTER</option>
-              <option>CAMBRIDGE</option>
-              <option>EDINBURGH</option>
-              <option>RAL</option>
-              <option>QUB</option>
-              <option>MSSL</option>
-              <option>JBO</option>
-             </select>
-        </tr>
         <tr> 
           <td colspan="2" align="center">
             <input type="submit" value="Login"/></td>
@@ -112,6 +100,8 @@
       </table>
     </center> 
    </form>
+   <br />
+   If your new to Astrogrid please sign in here click: <a href="agadministration.html?action=insertaccount">Register</a>
                               <!-- End Real  pages go here -->
   
                            </td>
