--- a/astrogrid/portalB/src/ral/html/agindex.html
+++ b/astrogrid/portalB/src/ral/html/agindex.html
@@ -55,6 +55,8 @@
                    <a href="agmyspace.html"><u><b>Browse MySpace</b></u></a> 
                   <br>
       <br>
+			      <a href="agadministration.html"><u><b>Admin</b></u></a>
+			      <br /><br />
                    <a href="agjobmonitor.html"><u><b>Job Monitor</b></u></a> 
                   <br>
       <br>
