--- a/astrogrid/portalB/src/ral/html/agregistry.html
+++ b/astrogrid/portalB/src/ral/html/agregistry.html
@@ -55,6 +55,8 @@
                   <br><br>
                   <a href="agmyspace.html"><b>Browse MySpace</b></a>
                   <br><br>
+                  <a href="agadministration.html"><b>Admin</b></a>
+                  <br><br>
                   <a href="agjobmonitor.html"><b>Job Monitor</b></a>
                   <br><br>
                   <a href="agtools.html"><b>Tools</b></a>
