Fixes to make maven happy(er)

--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/service/package.html
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/service/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-This package is an experimental one for managing the web services.
+Handles the service end of the datacenter - the connections to the clients, and managing the service instances.
 </body>
 </html>
