--- a/astrogrid/datacenter/packaging/pal/README.html
+++ b/astrogrid/datacenter/packaging/pal/README.html
@@ -11,16 +11,16 @@
 
 <h2>Map</h2>
 <ul>
-<li>/bin - executables
+<li>/<a href="bin">bin</a> - executables
 	<ul><li>register-service.jar - register the installed service with axis
 	    <li>test-server.jar - test the installed service
 	</ul>
 <li>/<a href="doc/index.html">doc</a> - documentation
-<li>/lib - libraries
-	<ul><li>axis.zip
-	    <li>datacenter-server.zip
+<li>/<a href="lib">lib</a> - libraries
+	<ul><li>axis.war - basic axis web application
+	    <li>datacenter-server.zip - classes and resources for datacenter-server
 	</ul>
-<li>/licenses - legal business
+<li>/<a href="licenses">licenses</a> - legal business
 </ul>
 
 <hr>
