--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/delegate/package.html
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/delegate/package.html
@@ -12,33 +12,25 @@ one delegate to make as many calls to that service as you like.
 Don't use a delegate constructor to create a delegate, use the call:
 <p>
 <code><pre>
-  DatacenterDelegate delegate = DatacenterDelegate.makeDelegate(String endpoint);
+  AdqlQuerier delegate = DatacenterDelegateFactory.makeAdqlQuerier(String endpoint);
+</pre></code>
+or
+<code><pre>
+  ConeSearcher delegate = DatacenterDelegateFactory.makeConeSearcher(String endpoint);
 </pre></code>
 <p>
-This will construct the right Delegate subclass, depending on the server being connected to.
-This server type is defined on the client side (ie you, the Delegate user) by the protocol
-given in the <b>endpoint</b> parameter which should be 'url'-like:
-<blockquote>
-  <p> <b>(null)</b> passing a null string creates a dummy delegate that can be used for testing </p>
-  <p> <b>http://...</b> connects to a web-service datacenter (ie Apache/Tomcat/Axis server). </p>
-  <p> <b>socket://...</b> connects to a socket based datacenter (ie 'pure' TCP/IP dual stream). </p>
-   <p> <b>grid://...</b> connects to a grid-service datacenter (eg Globus, not implemented yet) </p>
-   <p> <b>direct://...</b> connects to a colocated datacenter (runs on same JVM, not implemented yet) </p>
-</blockquote>
-<p>
 Note that some datacenters might provide more than one connection type, but this is (presumably?)
-information you can find in the registry.
+information you can find in the registry.  You will get an exception if you try to create a delegate
+type that cannot be served on that endpoint.
 <p>
+<h3>Using an AdqlQuerier</h3>
 <h4>Doing a Query</h4>
-Call <code>delegate.doQuery(Element query)</code> to carry out a blocking query
-on the service. Actually this will take any query; make sure the type is specified
-in the surrounding <code>Query</code> tag, eg <code>&lt;Query type='adql'&gt;</code>
- or <code>&lt;Query type='astrogrid'&gt;</code>
+Call <code>delegate.doQuery(adql)</code> to carry out a blocking query
+on the service.
 <p>
 To start an asynchronous query, you first call <code>makeQuery()</code> which returns
-a status code and an assigned query id (if it was not provided in the given document).
-You can then registerListeners, etc, and when you are ready, start the query using
-<code>startQuery()</code>.  Your listeners will be notified when the query is complete,
+a status code and a DatacenterQuery object, which you then use to control and monitor
+the query at the server end.  Your listeners will be notified when the query is complete,
 and you can then call getResultsAndClose() which returns a url of where to find the
 results.  NB once this call is made you may not be able to access information on
 that query ID 'session' again.
