Added registry admin page, edited other menus to include registry Admin entry
9 October 2003 by Elizabeth Auden

--- a/astrogrid/portalB/src/cocoon/html/agdataqueryhelp.html
+++ b/astrogrid/portalB/src/cocoon/html/agdataqueryhelp.html
@@ -51,6 +51,8 @@
                   <br /><br />
                   <a href="/cocoon/astrogrid/agregistry.html"><b>Browse Registry</b></a>
                   <br /><br />
+                  <a href="/cocoon/astrogrid/agregadmin.html"><b>Registry Admin</b></a>
+                  <br><br>
                   <i><b>Data Query</b></i>
                   <br /><br />
                   <a href="/cocoon/astrogrid/agmyspace.html"><b>Browse MySpace</b></a>
