--- a/astrogrid/portalB/src/cocoon/html/agdataquery.html
+++ b/astrogrid/portalB/src/cocoon/html/agdataquery.html
@@ -51,6 +51,8 @@
                   <br><br>
                   <a href="agregistry.html"><b>Browse Registry</b></a>
                   <br><br>
+                  <a href="agregadmin.html"><b>Registry Admin</b></a>
+                  <br><br>
                   <i><b>Data Query</b></i>
                   <br><br>
                   <a href="agmyspace.html"><b>Browse MySpace</b></a>
