--- a/astrogrid/portalB/src/cocoon/html/agnologin.html
+++ b/astrogrid/portalB/src/cocoon/html/agnologin.html
@@ -50,6 +50,8 @@
                   <br><br>
                   <i><b>Browse Registry</b></i>
                   <br><br>
+                  <i><b>Registry Admin</b></i>
+                  <br><br>
                   <i><b>Data Query</b></i>
                   <br><br>
                   <i><b>Browse MySpace</b></i>
