--- a/astrogrid/portalB/src/cocoon/html/agregistry.html
+++ b/astrogrid/portalB/src/cocoon/html/agregistry.html
@@ -50,6 +50,8 @@
                   <br><br>
                   <i><b>Browse Registry</b></i>
                   <br><br>
+                  <a href="agregadmin.html"><b>Registry Admin</b></a>
+                  <br><br>
                   <a href="agdataquery.html"><b>Data Query</b></a>
                   <br><br>
                   <a href="agmyspace.html"><b>Browse MySpace</b></a>
@@ -83,7 +85,7 @@
                         <tr align="left" valign="top">
                            <td style="rowspan="1" colspan="3">
                              <!-- Real  pages go here --> 
-   <form method="POST" action="registry.xsp">:q
+   <form method="POST" action="action.xsp">
    
    <h1>Simple Registry Query</h1>
    <p>
@@ -104,7 +106,7 @@
    <input type="RADIO" NAME="QueryType" value="listServiceMetadataFormat">
       List Services Metadata Format
    <p>
-     Element: <input name="Element" type="TEXT" value="id">
+     Element: <input name="Element" type="TEXT" value="shortName">
      Element Value: <input name="Value" type="TEXT" value="all">
      <input type="SUBMIT" value="Submit"> 
    </p>
@@ -112,11 +114,11 @@
 
  <hr/>
 
- <form method="POST" action="registryquery.xsp">
+ <form method="POST" action="action.xsp">
   <h1>More advanced Registry Query with conditions</h1>
   <p>Type a Registry Query in the boxes below (one or two conditions):
    </p>
-   <input name="Element1" type="TEXT" value="id"/> 
+   <input name="Element1" type="TEXT" value="shortName"/> 
    <select name="Operator1" value="EQ">
      <optgroup>
        <option>EQ</option>
@@ -125,8 +127,6 @@
        <option>GE</option>
        <option>LT</option>
        <option>LE</option>
-       <option>STARTS WITH</option>
-       <option>CONTAINS</option>
      </optgroup>
    </select>
    <input name="Value1" type="TEXT" value=""/>
@@ -150,8 +150,6 @@
        <option>GE</option>
        <option>LT</option>
        <option>LE</option>
-       <option>STARTS WITH</option>
-       <option>CONTAINS</option>
      </optgroup>
    </select>
    <input name="Value2" type="TEXT" value=""/>
@@ -159,11 +157,12 @@
    Enter Web Server:
    <select name="WebServer" value="Rutherford">
        <optgroup label="Web Servers">
-	        <option> MSSL </option>
-	        <option> Rutherford </option>
+	        <option value="axis://143.210.36.175:8080"> Leicester </option>
+	        <option value="axis://msslxy.mssl.ucl.ac.uk:8080"> MSSL </option>
+	        <option value="axis://stargrid1.bnsc.rl.ac.uk:8080"> Rutherford </option>
        </optgroup>
    </select>
-   <input type="SUBMIT" name="submitquery" value="Submit"/>
+   <input type="SUBMIT" name="submitupdate" value="Submit"/>
    </p>
   </form> 
                              <!-- End of - Real  pages go here --> 
