--- a/astrogrid/portalB/src/cocoon/html/agregistryhelp.html
+++ b/astrogrid/portalB/src/cocoon/html/agregistryhelp.html
@@ -50,6 +50,8 @@
                   <br><br>
                   <i><b>Browse Registry</b></i>
                   <br><br>
+                  <a href="agregadmin.html"><b>Registry Admin</b></a>
+                  <br><br>
                   <a href="agdataquery.html"><b>Data Query</b></a>
                   <br><br>
                   <a href="agmyspace.html"><b>Browse MySpace</b></a>
