Edited serveral pages to update registry browser / admin:
portalB/src/cocoon/sitemap.xmap 
portalB/src/cocoon/common/xsl/astrogrid.xsl
portalB/src/cocoon/common/xsl/agtemplate.xsl
portalB/src/cocoon/common/xsl/registrytemplate.xsl
portalB/src/cocoon/html/agindex.html
portalB/src/cocoon/html/agregistry.html
portalB/src/cocoon/html/agregadmin.html
portalB/src/cocoon/registry/xsl/*.xsl
portalB/src/cocoon/registry/xsp/*.xsp

10 October 2003 by Elizabeth Auden

--- a/astrogrid/portalB/src/cocoon/html/agregadmin.html
+++ b/astrogrid/portalB/src/cocoon/html/agregadmin.html
@@ -90,7 +90,7 @@
 
  <hr/>
 
- <form method="POST" action="update.xsp">
+ <form method="POST" action="registry/update">
   <h1>Registry Administration</h1>
    <table>
      <tr><td>User Name: </td>
