--- a/astrogrid/portalB/src/cocoon/html/agregistry.html
+++ b/astrogrid/portalB/src/cocoon/html/agregistry.html
@@ -85,7 +85,7 @@
                         <tr align="left" valign="top">
                            <td style="rowspan="1" colspan="3">
                              <!-- Real  pages go here --> 
-   <form method="POST" action="action.xsp">
+   <form method="POST" action="registry/action">
    
    <h1>Simple Registry Query</h1>
    <p>
